Update dowload script to monthly format

--- a/notebooks/rolling.ipynb
+++ b/notebooks/rolling.ipynb
@@ -288,6 +288,58 @@
     "\n",
     "data = run(Path(\"../data/monthly\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = yf.download(\"^OMX\", start=\"2023-01-01\", end=\"2024-01-20\", interval=\"1mo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date,OMX\n",
+      "2023-01,2198.5400390625\n",
+      "2023-02,2226.75\n",
+      "2023-03,2223.75\n",
+      "2023-04,2270.580078125\n",
+      "2023-05,2234.9599609375\n",
+      "2023-06,2309.89990234375\n",
+      "2023-07,2250.919921875\n",
+      "2023-08,2184.739990234375\n",
+      "2023-09,2155.489990234375\n",
+      "2023-10,2075.7900390625\n",
+      "2023-11,2232.4599609375\n",
+      "2023-12,2398.169921875\n",
+      "2024-01,2370.1298828125\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(data.rename(columns={\"Close\":\"OMX\"}).to_csv(date_format=\"%Y-%m\", columns=[\"OMX\"]))"
+   ]
   }
  ],
  "metadata": {
